fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@
 img {
     flex-shrink: 0;
 }
-body {
+body p{
 color: var(--Main-Black, var(--Main-Black, #000));
 text-align: center;
 font-family: Alexandria;
